# gemini_api_tools

./: .cursorrules  .env.example  .gitignore  README.md  app.py  app_gui.py  app_legacy.py  gemini-api-webapp.service  pyproject.toml  requirements.txt  start_server.sh  stop_server.sh
static/: index.html
static/css/: style.css
static/js/: main.js
webapp/: .env.example  .gitignore  README.md  app.py  gemini-api-webapp.service  pyproject.toml  requirements.txt  start_server.bat  start_server.sh
webapp/static/: index.html
webapp/static/css/: style.css
webapp/static/js/: main.js
