[project]
name = "gemini-api-tools-webapp"
version = "1.0.0"
description = "Google Gemini API Tools - Web Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false

